--- a/air-life-app/www/templates/air-clinic-my-service.html
+++ b/air-life-app/www/templates/air-clinic-my-service.html
@@ -1,1 +1,95 @@
 
+<!--我的服务-->
+<ion-view view-title="我的服务"   class="app-air-clinic-my-service">
+  <ion-content scroll="false">
+    <ion-slide-box show-pager="false" ion-slide-tabs slide-tabs-scrollable="false">
+      <ion-slide ion-slide-tab-label="已确认" >
+        <ion-content>
+          <ion-list>
+            <div class="list ">
+              <a class="item item-thumbnail-left" >
+                <img src="img/timg.jpg">
+                <h2>赵医生(工号001)</h2>
+                <span><p>滋味龙腾新世界2611<p>医师</p></p></span>
+                <br>
+                <div class="row">
+                  <p class="tab-myserve-left" >已确认</p>
+                  <div class="item tab-myserve-item col50">
+                    建议复诊时间:2016-01-02
+                  </div>
+                </div>
+              </a>
+            </div>
+          </ion-list>
+        </ion-content>
+      </ion-slide>
+      <ion-slide ion-slide-tab-label="待确认">
+        <ion-content scroll="true">
+          <ion-list>
+            <div class="list ">
+              <a class="item item-thumbnail-left" >
+                <img src="img/timg.jpg">
+                <h2>赵医生(工号001)</h2>
+                <span><p>滋味龙腾新世界2611<p>医师</p></p></span>
+                <br>
+                <div class="row">
+                  <p class="tab-myserve-left" >待确认</p>
+                  <div class="item tab-myserve-item col50">
+                    建议复诊时间:2016-01-02
+                  </div>
+                </div>
+              </a>
+            </div>
+          </ion-list>
+        </ion-content>
+
+      </ion-slide>
+      <ion-slide ion-slide-tab-label="待复诊">
+        <ion-content scroll="true">
+          <ion-list>
+            <div class="list ">
+              <a class="item item-thumbnail-left" >
+                <img src="img/timg.jpg">
+                <h2>赵医生(工号001)</h2>
+                <span><p>滋味龙腾新世界2611<p>医师</p></p></span>
+                <br>
+                <div class="row">
+                  <p class="tab-myserve-left" >待复诊</p>
+                  <div class="item tab-myserve-item col50">
+                    建议复诊时间:2016-01-02
+                  </div>
+                </div>
+              </a>
+            </div>
+          </ion-list>
+        </ion-content>
+
+      </ion-slide>
+      <ion-slide ion-slide-tab-label="待支付">
+        <ion-content scroll="true">
+          <ion-list>
+            <div class="list ">
+              <a class="item item-thumbnail-left" >
+                <img src="img/timg.jpg">
+                <h2>赵医生(工号001)</h2>
+                <span><p>滋味龙腾新世界2611<p>医师</p></p></span>
+                <br>
+                <div class="row">
+                  <p class="tab-myserve-left" >待支付</p>
+                  <h5 class="item tab-myserve-item col50">
+                    建议复诊时间:2016-01-02
+                  </h5>
+                </div>
+              </a>
+            </div>
+          </ion-list>
+        </ion-content>
+
+      </ion-slide>
+    </ion-slide-box>
+
+
+
+  </ion-content>
+
+</ion-view>
