--- a/air-life-app/www/templates/air-clinic-personal-center.html
+++ b/air-life-app/www/templates/air-clinic-personal-center.html
@@ -1,1 +1,23 @@
-
+<!-- 个人中心-->
+<ion-view view-title="个人中心"   class="app-air-clinic-personal-center">
+  <ion-content >
+    <ul class="list">
+      <li class="item" style="padding: 0px;border: none">
+      <div class="item item-icon-left"  style="border: none">
+        <!--<i class="icon ion-ios-telephone-outline"></i>-->
+        老司机</div>
+         <div class="item item-icon-left"  style="border: none">
+           <i class="icon ion-ios-telephone-outline"></i>
+           123423123342</div>
+      </li>
+      <li class="item" style="padding: 0px;border: none">
+        <div class="item item-icon-left"  style="border: none">
+          <i class="icon ion-compose"></i>
+          老司机</div>
+        <div class="item item-icon-left"  style="border: none">
+          <i class="icon ion-ios-telephone-outline"></i>
+          123423123342</div>
+      </li>
+    </ul>
+    </ion-content>
+  </ion-view>
