--- a/air-life-app/scss/style.scss
+++ b/air-life-app/scss/style.scss
@@ -4,3 +4,4 @@
 @import "./_air-clinic-page.scss";
 @import "./air-clinic-doctors.scss";
 @import "./air-clinic-doctor-details.scss";
+@import "./air-clinic-my-serve.scss";
