--- a/air-life-app/www/css/style.css
+++ b/air-life-app/www/css/style.css
@@ -62,6 +62,8 @@
     width: 100%; }
   .app-air-home-page .home-page .row {
     padding: 0 !important; }
+    .app-air-home-page .home-page .row h2, .app-air-home-page .home-page .row p {
+      width: 100px; }
   .app-air-home-page .home-page .col-50 {
     padding: 0 !important; }
   .app-air-home-page .home-page .item-thumbnail-right {
@@ -69,8 +71,6 @@
   .app-air-home-page .home-page .row img {
     width: 38px;
     height: 38px; }
-  .app-air-home-page .home-page .row .model-row h2, .app-air-home-page .home-page .row .model-row p {
-    width: 100%  !important; }
 
 .app-air-clinic-page {
   background: #eee;
