--- a/air-life-app/www/css/style.css
+++ b/air-life-app/www/css/style.css
@@ -56,22 +56,6 @@
   .app-air-register-user i {
     color: #0ba9f0; }
 
-.app-air-home-page {
-  background-color: #f0f0f0; }
-  .app-air-home-page img {
-    width: 100%; }
-  .app-air-home-page .home-page .row {
-    padding: 0 !important; }
-    .app-air-home-page .home-page .row h2, .app-air-home-page .home-page .row p {
-      width: 100px; }
-  .app-air-home-page .home-page .col-50 {
-    padding: 0 !important; }
-  .app-air-home-page .home-page .item-thumbnail-right {
-    min-height: 20px  !important; }
-  .app-air-home-page .home-page .row img {
-    width: 38px;
-    height: 38px; }
-
 .app-air-clinic-page {
   background: #eee;
   letter-spacing: .5px;
@@ -245,6 +229,79 @@
   color: #fff;
   border: 1px solid #0c60ee;
   border-radius: 2px; }
+
+.app-air-clinic-my-service .slider {
+  height: 100%; }
+
+.app-air-clinic-my-service .tab-myserve-item {
+  line-height: 0px;
+  color: #08a9ec;
+  height: 10px;
+  border-radius: 6px;
+  border-color: #08a9ec; }
+
+.app-air-clinic-my-service .tab-myserve-left {
+  position: absolute;
+  margin-left: -80px; }
+
+.slidingTabs {
+  height: 50px;
+  z-index: 10; }
+
+.slidingTabs .scroll {
+  height: auto;
+  min-width: 100%; }
+
+.slidingTabs ul {
+  background-color: #fff;
+  height: 50px; }
+
+.slidingTabs ul li {
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
+  float: left;
+  margin: 0;
+  padding: 0 12px 20px 12px;
+  font-size: 14px;
+  text-transform: uppercase;
+  color: #8c8c8c;
+  -webkit-transition: color .25s ease-in-out;
+  transition: color .25s ease-in-out;
+  position: relative;
+  overflow: hidden; }
+
+.slidingTabs ul li.tab-active {
+  color: #08a9ec !important; }
+
+.slidingTabs ul li .ink {
+  display: block;
+  position: absolute;
+  background: rgba(56, 147, 245, 0.8);
+  border-radius: 100%;
+  transform: scale(0); }
+
+/*.slidingTabs ul li .ink.animate {*/
+/*-webkit-animation: ripple 0.65s linear;*/
+/*animation: ripple 0.65s linear;*/
+/*}*/
+.slidingTabs .tab-indicator-wrapper {
+  width: 100%;
+  height: 2px;
+  background-color: rgba(255, 255, 255, 0.2);
+  -webkit-transform: translateY(-2px);
+  position: absolute; }
+
+.slidingTabs .tab-indicator-wrapper .tab-indicator {
+  height: 100%;
+  background-color: #08a9ec;
+  width: 70px;
+  position: relative; }
+
+@-webkit-keyframes ripple {
+  100% {
+    opacity: 0;
+    transform: scale(2.5); } }
 
 .air-clinic-illness-description .flow {
   display: flex;
