--- a/air-life-app/scss/style.scss
+++ b/air-life-app/scss/style.scss
@@ -4,7 +4,7 @@
 @import "./_air-clinic-page.scss";
 @import "./air-clinic-doctors.scss";
 @import "./air-clinic-doctor-details.scss";
-
+@import "./air-home-page.scss";
 @import "./air-clinic-my-serve.scss";
 
 @import "_air-clinic-illness-description.scss";
