--- a/air-life-app/www/css/style.css
+++ b/air-life-app/www/css/style.css
@@ -230,6 +230,22 @@
   border: 1px solid #0c60ee;
   border-radius: 2px; }
 
+.app-air-home-page {
+  background-color: #f0f0f0; }
+  .app-air-home-page img {
+    width: 100%; }
+  .app-air-home-page .home-page .row {
+    padding: 0 !important; }
+    .app-air-home-page .home-page .row h2, .app-air-home-page .home-page .row p {
+      width: 100px; }
+  .app-air-home-page .home-page .col-50 {
+    padding: 0 !important; }
+  .app-air-home-page .home-page .item-thumbnail-right {
+    min-height: 20px  !important; }
+  .app-air-home-page .home-page .row img {
+    width: 38px;
+    height: 38px; }
+
 .app-air-clinic-my-service .slider {
   height: 100%; }
 
