--- a/air-life-app/www/templates/air-home-page.html
+++ b/air-life-app/www/templates/air-home-page.html
@@ -4,7 +4,7 @@
     <div class="home-page">
       <div class="row">
         <div class="col col-50">
-          <ion-list can-swipe="listCanSwipe model-row">
+          <ion-list can-swipe="listCanSwipe">
             <ion-item class="item-thumbnail-right">
               <img ng-src="../img/0.png">
               <h2>复诊</h2>
@@ -24,7 +24,7 @@
       </div>
       <div class="row">
         <div class="col col-50">
-          <ion-list can-swipe="listCanSwipe model-row">
+          <ion-list can-swipe="listCanSwipe">
             <ion-item class="item-thumbnail-right">
               <img ng-src="../img/3.png">
               <h2>名医联盟</h2>
