修改爱尔诊所

--- a/air-life-app/www/templates/air-home-page.html
+++ b/air-life-app/www/templates/air-home-page.html
@@ -14,7 +14,7 @@
         </div>
         <div class="col col-50">
           <ion-list can-swipe="listCanSwipe">
-            <ion-item class="item-thumbnail-right">
+            <ion-item class="item-thumbnail-right" href="#/air-clinic-home">
               <img ng-src="../img/2.png">
               <h2>爱尔诊所</h2>
               <p>名医坐诊</p>
