--- a/air-life-app/www/templates/air-clinic-illness-description.html
+++ b/air-life-app/www/templates/air-clinic-illness-description.html
@@ -2,7 +2,9 @@
   <ion-content>
     <div class="flow">
       <div class="flowItem">
-        <span class="fIcon"></span>
+        <span class="fIcon active">
+          <i class="ion-ios-checkmark-empty"></i>
+        </span>
         <span class="des">病情描述</span>
       </div>
       <div class="flowItem">
