--- a/air-life-app/scss/_air-clinic-illness-description.scss
+++ b/air-life-app/scss/_air-clinic-illness-description.scss
@@ -40,6 +40,16 @@
         height: 16px;
         border: 2px solid #09a9ef;
         border-radius: 50%;
+        &.active {
+          background: #09a9ef;
+          text-align: center;
+          i:before {
+            color:white;
+            height: 100%;
+            line-height: 16px;
+            font-size: 16px;
+          }
+        }
       }
       .des {
         position: absolute;
