添加个人中心页面

--- a/air-life-app/www/templates/air-clinic-personal-center.html
+++ b/air-life-app/www/templates/air-clinic-personal-center.html
@@ -10,13 +10,50 @@
            <i class="icon ion-ios-telephone-outline"></i>
            123423123342</div>
       </li>
+
+    </ul>
+    <ul class="list">
       <li class="item" style="padding: 0px;border: none">
         <div class="item item-icon-left"  style="border: none">
+          <a ng-click="onClickPersonalMessage()">
           <i class="icon ion-compose"></i>
-          老司机</div>
+          编辑个人信息
+          </a>
+        </div>
+       </li>
+      <li class="item" style="padding: 0px;border: none">
         <div class="item item-icon-left"  style="border: none">
-          <i class="icon ion-ios-telephone-outline"></i>
-          123423123342</div>
+          <i class="icon ion-locked"></i>
+          修改密码
+        </div>
+      </li>
+    </ul>
+    <ul class="list">
+      <li class="item" style="padding: 0px;border: none">
+        <div class="item item-icon-left"  style="border: none">
+          <i class="icon ion-ios-paper"></i>
+          我的预约
+        </div>
+      </li>
+      <li class="item" style="padding: 0px;border: none">
+        <div class="item item-icon-left"  style="border: none">
+          <i class="icon ion-person-stalker"></i>
+          家庭联系人
+        </div>
+      </li>
+    </ul>
+    <ul class="list">
+      <li class="item" style="padding: 0px;border: none">
+        <div class="item item-icon-left"  style="border: none">
+          <i class="icon ion-ios-chatbubble-outline" ></i>
+          意见反馈
+        </div>
+      </li>
+      <li class="item" style="padding: 0px;border: none">
+        <div class="item item-icon-left"  style="border: none">
+          <i class="icon ion-information-circled"></i>
+          关于
+        </div>
       </li>
     </ul>
     </ion-content>
