构建air-clinic-pay页面架构

--- a/air-life-app/www/templates/air-clinic-illness-description.html
+++ b/air-life-app/www/templates/air-clinic-illness-description.html
@@ -48,7 +48,7 @@
       </ion-list>
     </div>
     <ion-item class="padding">
-      <button class="button">提交预约单</button>
+      <button class="button" ng-click="onSubmit()">提交预约单</button>
     </ion-item>
     <div class="padding">
       <ion-item class="item-text-wrap">
