初步完成clinic-department的界面设计

--- a/air-life-app/scss/style.scss
+++ b/air-life-app/scss/style.scss
@@ -2,6 +2,7 @@
 @import "./_air-rest-password";
 @import "./_air-register-user";
 @import "./_air-clinic-home";
+@import "./_air-clinic-department";
 @import "./_air-clinic-page.scss";
 @import "./air-clinic-doctors.scss";
 @import "./air-clinic-doctor-details.scss";
