--- a/air-life-app/www/css/style.css
+++ b/air-life-app/www/css/style.css
@@ -73,6 +73,47 @@
   color: #ffffff;
   background-color: #60bdf8; }
 
+.app-air-clinic-department img {
+  width: 100%; }
+
+.app-air-clinic-department .item {
+  font-size: 14px;
+  border: none; }
+
+.app-air-clinic-department ion-checkbox {
+  display: inline-block; }
+
+.app-air-clinic-department .list {
+  margin-top: 10px; }
+
+.app-air-clinic-department .bold {
+  font-weight: bolder;
+  margin-bottom: 15px; }
+
+.app-air-clinic-department h2 {
+  font-size: 16px; }
+  .app-air-clinic-department h2 .tips {
+    color: #87cefa;
+    margin-left: 0; }
+  .app-air-clinic-department h2 span {
+    margin-left: 16px;
+    font-size: 14px;
+    font-weight: normal;
+    color: #888; }
+
+.app-air-clinic-department p {
+  font-size: 14px;
+  color: #888; }
+
+.app-air-clinic-department .department-details {
+  position: relative; }
+  .app-air-clinic-department .department-details .i {
+    position: absolute;
+    top: calc(50% - 8px);
+    right: 18px;
+    color: #888;
+    font-size: 16px; }
+
 .app-air-clinic-page {
   background: #eee;
   letter-spacing: .5px;
