--- a/air-life-app/www/templates/air-clinic-home.html
+++ b/air-life-app/www/templates/air-clinic-home.html
@@ -1,7 +1,7 @@
 <ion-view view-title="爱尔诊所" class="app-air-clinic-home">
   <ion-content>
     <ion-list>
-      <ion-item class="item item-thumbnail-left item-text-wrap" href="#/air-clinic-Doctor/:doctorId">
+      <ion-item class="item item-thumbnail-left item-text-wrap" href="#/air-clinic-department">
         <img ng-src="img/test.jpg" alt="">
         <h2>爱尔诊所后宰门诊室<small>9位三甲医生</small></h2>
         <span class="department">口腔科</span>
