完成air-clinic-pay页面样式

--- a/air-life-app/scss/style.scss
+++ b/air-life-app/scss/style.scss
@@ -6,6 +6,6 @@
 @import "./air-clinic-doctor-details.scss";
 @import "./air-home-page.scss";
 @import "./air-clinic-my-serve.scss";
-
+@import "./_air-clinic-pay.scss";
 @import "_air-clinic-illness-description.scss";
 
