--- a/air-life-app/www/templates/air-clinic-pay.html
+++ b/air-life-app/www/templates/air-clinic-pay.html
@@ -1,4 +1,4 @@
-<ion-view view-title="支付">
+<ion-view view-title="支付" class="ion-clinic-pay">
   <ion-content>
     <div class="flow">
       <div class="flowItem">
@@ -28,7 +28,7 @@
       <p>预约时间:2016-12-04 08:30:00</p>
     </ion-item>
     <ion-item>
-      <p>就诊地址：Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae blanditiis culpa cumque deserunt dolores eius harum hic laboriosam, nesciunt odit, optio ratione repellendus, repudiandae! Aspernatur natus nihil saepe sed sint.</p>
+      <p>就诊地址：爱尔诊所后宰门诊室 后宰门130号创新大厦24楼23号</p>
     </ion-item>
     <ion-item>
       <p>病情描述:测试</p>
@@ -37,19 +37,19 @@
       请选择支付方式
     </ion-item>
     <div class="list">
-      <a class="item item-thumbnail-left" href="#">
+      <div class="thumbnail-left">
         <img ng-src="img/test.jpg" >
         <p>微信支付</p>
         <p>推荐安装微信5.0及以上版本使用</p>
-      </a>
-      <a class="item item-thumbnail-left" href="#">
-        <img src="cover.jpg">
+      </div>
+      <div class="thumbnail-left">
+        <img ng-src="img/test.jpg">
         <p>支付宝支付</p>
         <p>推荐安装支付宝客户端的用户</p>
-      </a>
+      </div>
     </div>
     <div class="submit">
-      <button class="button button-block button-positive">确认支付</button>
+      <button class="button button-block">确认支付</button>
     </div>
 
   </ion-content>
