--- a/air-life-app/scss/_air-clinic-pay.scss
+++ b/air-life-app/scss/_air-clinic-pay.scss
@@ -1,4 +1,4 @@
-.air-clinic-illness-description {
+.ion-clinic-pay {
   .flow {
     display: flex;
     width: 100%;
@@ -61,26 +61,41 @@
   }
   .item {
     padding: 10px;
-    h2 {
-      margin: 0;
+  }
+  h2 {
+    font-weight: bolder;
+  }
+  .price {
+    position: absolute;
+    right: 10px;
+    bottom: 10px;
+    color: red;
+  }
+  .choice {
+    padding-left: 20px;
+    font-weight: bolder;
+    background: #ddd;
+  }
+  .list {
+    .thumbnail-left {
+      padding: 10px;
+      border-bottom: 1px solid #ddd;
+      img {
+        width: 40px;
+        height: 40px;
+        float: left;
+      }
+      p {
+        padding-left: 60px;
+        margin: 0;
+      }
     }
-    textarea {
-      resize: none;
-      width: 100%;
-      height: 80px;
-    }
-    .title {
-      font-size: 14px;
-      font-weight: bolder;
-      padding: 5px;
-    }
-    i {
-      font-size: 14px;
-    }
+  }
+  .submit {
+    padding: 0 10px;
     button {
-      width: 100%;
       background: #09a9ef;
-      color: #fff;
+      color: white;
     }
   }
 }
