修改诊所跳转BUG

--- a/air-life-app/www/templates/air-home-page.html
+++ b/air-life-app/www/templates/air-home-page.html
@@ -1,12 +1,12 @@
 <ion-view class="app-air-home-page" view-title="爱尔生活">
   <ion-content>
-    <img src="../img/home-page.jpg" alt="">
+    <img ng-src="img/home-page.jpg" alt="">
     <div class="home-page">
       <div class="row">
         <div class="col col-50">
           <ion-list can-swipe="listCanSwipe">
             <ion-item class="item-thumbnail-right">
-              <img ng-src="../img/0.png">
+              <img ng-src="img/0.png">
               <h2>复诊</h2>
               <p>及时复诊预约</p>
             </ion-item>
@@ -15,7 +15,7 @@
         <div class="col col-50">
           <ion-list can-swipe="listCanSwipe">
             <ion-item class="item-thumbnail-right" href="#/air-clinic-home">
-              <img ng-src="../img/2.png">
+              <img ng-src="img/2.png">
               <h2>爱尔诊所</h2>
               <p>名医坐诊</p>
             </ion-item>
@@ -26,7 +26,7 @@
         <div class="col col-50">
           <ion-list can-swipe="listCanSwipe">
             <ion-item class="item-thumbnail-right">
-              <img ng-src="../img/3.png">
+              <img ng-src="img/3.png">
               <h2>名医联盟</h2>
               <p>线上咨询</p>
             </ion-item>
@@ -35,7 +35,7 @@
         <div class="col col-50">
           <ion-list can-swipe="listCanSwipe">
             <ion-item class="item-thumbnail-right">
-              <img ng-src="../img/5.png">
+              <img ng-src="img/5.png">
               <h2>商户联盟</h2>
               <p>信赖商户</p>
             </ion-item>
@@ -50,13 +50,13 @@
       <!--医生详情开始-->
       <!--医生一详情-->
       <ion-item class="doctor-details item-text-wrap item-thumbnail-left" href="#">
-        <img src="../img/home-page.jpg" alt="">
+        <img ng-src="img/home-page.jpg" alt="">
         <h2>邱洪涛<small>产科 医师</small></h2>
         <p>从事妇产科临床与教学25年，擅长处理产程中出现的各种异常情况及疑难问题，娴熟产前、臀助产，内选转术等助产技术。</p>
       </ion-item>
       <!--医生一详情-->
       <ion-item class="doctor-details item-text-wrap item-thumbnail-left" href="#">
-        <img src="../img/home-page.jpg" alt="">
+        <img ng-src="img/home-page.jpg" alt="">
         <h2>邱洪涛<small>产科 医师</small></h2>
         <p>从事妇产科临床与教学25年，擅长处理产程中出现的各种异常情况及疑难问题，娴熟产前、臀助产，内选转术等助产技术。</p>
       </ion-item>
