--- a/air-life-app/www/templates/air-tabs.html
+++ b/air-life-app/www/templates/air-tabs.html
@@ -1,12 +1,12 @@
 <ion-tabs class="tabs-icon-top tabs-color-active-positive">
 
   <!-- 首页 -->
-  <ion-tab title="首页" icon-off="ion-home" icon-on="ion-home" href="#/tab/dash">
+  <ion-tab title="首页" icon-off="ion-home" icon-on="ion-home">
     <ion-nav-view name="air-home-page"></ion-nav-view>
   </ion-tab>
 
   <!-- 我的服务 -->
-  <ion-tab title="我的服务" icon-off="ion-ios-keypad" icon-on="ion-ios-keypad" href="#/tab/chats">
+  <ion-tab title="我的服务" icon-off="ion-ios-keypad" icon-on="ion-ios-keypad" href="#//air-clinic-my-service/account">
     <ion-nav-view name="air-my-service"></ion-nav-view>
   </ion-tab>
 
