--- a/air-life-app/www/templates/air-clinic-department.html
+++ b/air-life-app/www/templates/air-clinic-department.html
@@ -1,7 +1,6 @@
 <ion-view view-title="诊室" class="app-air-clinic-department">
-  <ion-content>
     <ion-content>
-      <img src="../img/home-page.jpg">
+      <img ng-src="img/home-page.jpg">
       <ion-list class="list">
         <ion-item class="item item-text-wrap">
           <h2>爱尔诊所后宰门诊室</h2>
@@ -21,12 +20,12 @@
 
         <!--科室详情开始-->
         <!--科室1详情-->
-        <ion-item class="department-details item-thumbnail-right item-text-wrap" href="#/airClinicPage/1">
+        <ion-item class="department-details item-thumbnail-right item-text-wrap" href="#/air-clinic-page">
           <i class="ion-chevron-right i"></i>
           <h2 class="bold">修复科(镶牙)<span>1位三甲医生</span></h2>
           <p>固定义齿,活动义齿,全口义齿,牙齿美容,附着体义齿等治疗</p>
         </ion-item>
-        <ion-item class="department-details item-thumbnail-right item-text-wrap" href="#/airClinicPage/1">
+        <ion-item class="department-details item-thumbnail-right item-text-wrap" href="#/airClinicPage">
           <i class="ion-chevron-right i"></i>
           <h2 class="bold">修复科(镶牙)<span>1位三甲医生</span></h2>
           <p>固定义齿,活动义齿,全口义齿,牙齿美容,附着体义齿等治疗</p>
@@ -35,6 +34,5 @@
 
         <!--科室详情结束-->
       </ion-list>
-
   </ion-content>
 </ion-view>
