更改页面跳转顺序

--- a/air-life-app/www/templates/air-tabs.html
+++ b/air-life-app/www/templates/air-tabs.html
@@ -1,17 +1,17 @@
 <ion-tabs class="tabs-icon-top tabs-color-active-positive">
 
   <!-- 首页 -->
-  <ion-tab title="首页" icon-off="ion-home" icon-on="ion-home">
+  <ion-tab title="首页" icon-off="ion-home" icon-on="ion-home" href="#/air-home-page">
     <ion-nav-view name="air-home-page"></ion-nav-view>
   </ion-tab>
 
   <!-- 我的服务 -->
-  <ion-tab title="我的服务" icon-off="ion-ios-keypad" icon-on="ion-ios-keypad" href="#//air-clinic-my-service/account">
+  <ion-tab title="我的服务" icon-off="ion-ios-keypad" icon-on="ion-ios-keypad" href="#/air-clinic-my-service">
     <ion-nav-view name="air-my-service"></ion-nav-view>
   </ion-tab>
 
   <!-- 个人中心 -->
-  <ion-tab title="个人中心" icon-off="ion-android-person" icon-on="ion-android-person" href="#/tab/account">
+  <ion-tab title="个人中心" icon-off="ion-android-person" icon-on="ion-android-person" href="#/air-clinic-personal-center">
     <ion-nav-view name="air-personal-center"></ion-nav-view>
   </ion-tab>
 
