--- a/air-life-app/www/templates/air-clinic-department.html
+++ b/air-life-app/www/templates/air-clinic-department.html
@@ -13,19 +13,19 @@
         </ion-item>
       </ion-list>
       <ion-list class="list">
-        <ion-item class="departments">
+        <ion-item class="departments" href="#/air-clinic-page">
           <h2>科室 <span class="tips">(点击科室选择医生进行门诊预约)</span></h2>
         </ion-item>
         <!--添加item-text-wrap 可以使item类的内容换行-->
 
         <!--科室详情开始-->
         <!--科室1详情-->
-        <ion-item class="department-details item-thumbnail-right item-text-wrap" href="#/air-clinic-page">
+        <ion-item class="department-details item-thumbnail-right item-text-wrap">
           <i class="ion-chevron-right i"></i>
           <h2 class="bold">修复科(镶牙)<span>1位三甲医生</span></h2>
           <p>固定义齿,活动义齿,全口义齿,牙齿美容,附着体义齿等治疗</p>
         </ion-item>
-        <ion-item class="department-details item-thumbnail-right item-text-wrap" href="#/airClinicPage">
+        <ion-item class="department-details item-thumbnail-right item-text-wrap">
           <i class="ion-chevron-right i"></i>
           <h2 class="bold">修复科(镶牙)<span>1位三甲医生</span></h2>
           <p>固定义齿,活动义齿,全口义齿,牙齿美容,附着体义齿等治疗</p>
