更改department跳转页面两个

--- a/air-life-app/www/css/style.css
+++ b/air-life-app/www/css/style.css
@@ -83,6 +83,10 @@
 .app-air-clinic-department ion-checkbox {
   display: inline-block; }
 
+.app-air-clinic-department a {
+  text-decoration: none;
+  color: #000000; }
+
 .app-air-clinic-department .list {
   margin-top: 10px; }
 
