--- a/air-life-app/scss/_air-clinic-department.scss
+++ b/air-life-app/scss/_air-clinic-department.scss
@@ -10,6 +10,10 @@
     display: inline-block;
     //width: 30%;
   }
+  a{
+    text-decoration: none;
+    color: #000000;
+  }
   .list{
     margin-top: 10px;
   }
