添加我的预约  家庭联系人界面

--- a/air-life-app/scss/style.scss
+++ b/air-life-app/scss/style.scss
@@ -8,6 +8,15 @@
 @import "./air-clinic-doctor-details.scss";
 @import "./air-home-page.scss";
 @import "./air-clinic-my-serve.scss";
+
 @import "./_air-clinic-pay.scss";
+
+@import "./air-clinic-my-appointment.scss";
+@import "./air-clinic-family-relation.scss";
+@import "./air-clinic-edit-personal.scss";
+@import "./air-clinic-add-personal.scss";
+@import "./air-clinic-personal-center.scss";
+@import "./air-clinic-personal-message.scss";
+
 @import "_air-clinic-illness-description.scss";
 
