--- a/air-life-app/www/templates/air-clinic-add-personal.html
+++ b/air-life-app/www/templates/air-clinic-add-personal.html
@@ -1,21 +1,15 @@
 <ion-view view-title="添加联系人"   class="app-air-clinic-add-personal">
   <ion-content >
-    <div class="list row" style="margin: 0px" >
-      <div class="item col-30" href="#" style="border: none">
-        姓名
+      <div class="list">
+        <label class="item item-input">
+          <span class="input-label">姓名</span>
+          <input type="text">
+        </label>
+        <label class="item item-input">
+          <span class="input-label">身份证号</span>
+          <input type="password">
+        </label>
       </div>
-      <div class="item col-70" style="border: none;text-align: center" >
-        老司机
-      </div>
-    </div>
-    <div class="list row" >
-      <div class="item col-30" href="#" style="border: none">
-        身份证
-      </div>
-      <div class="item col-70" style="border: none;text-align: center" >
-        1231231235434124234234
-      </div>
-    </div>
     <div class="list row" >
       <div class="item col-30" href="#" style="border: none">
         性别
