--- a/air-life-app/www/templates/air-clinic-my-appointment.html
+++ b/air-life-app/www/templates/air-clinic-my-appointment.html
@@ -1,1 +1,34 @@
-
+<ion-view view-title="我的预约"   class="app-air-clinic-my-appointment">
+  <ion-content>
+    <ion-slide-box show-pager="false" ion-slide-tabs slide-tabs-scrollable="false">
+      <ion-slide ion-slide-tab-label="未付款" >
+        <ion-content>
+          <div class="row">
+            <div class="col-70">
+              <div><span>2016-12-02</span><span>11:25</span><span>老司机</span></div>
+            <div><span>口腔科</span><span>孙医生（工号007）</span></div>
+            </div>
+            <div class="col-30">
+              <div>加急预约</div>
+              <div>￥0.01</div>
+            </div>
+          </div>
+        </ion-content>
+      </ion-slide>
+      <ion-slide ion-slide-tab-label="已付款" >
+        <ion-content>
+          <div class="row">
+            <div class="col-70">
+              <div><span>2016-12-02</span><span>11:25</span><span>老司机</span></div>
+              <div><span>口腔科</span><span>孙医生（工号007）</span></div>
+            </div>
+            <div class="col-30">
+              <div>加急预约</div>
+              <div>￥0.01</div>
+            </div>
+          </div>
+        </ion-content>
+      </ion-slide>
+    </ion-slide-box>
+    </ion-content>
+  </ion-view>
