--- a/air-life-app/www/templates/air-clinic-personal-center.html
+++ b/air-life-app/www/templates/air-clinic-personal-center.html
@@ -31,14 +31,18 @@
     <ul class="list">
       <li class="item" style="padding: 0px;border: none">
         <div class="item item-icon-left"  style="border: none">
+          <a ng-click="onClickMyAppointment()">
           <i class="icon ion-ios-paper"></i>
           我的预约
+          </a>
         </div>
       </li>
       <li class="item" style="padding: 0px;border: none">
         <div class="item item-icon-left"  style="border: none">
+          <a ng-click="onClickFamilyRelation()">
           <i class="icon ion-person-stalker"></i>
           家庭联系人
+          </a>
         </div>
       </li>
     </ul>
