更改登陆页面背景图大小

--- a/air-life-app/scss/_air-login.scss
+++ b/air-life-app/scss/_air-login.scss
@@ -1,6 +1,7 @@
 .app-air-login{
   background: url("../img/air-life.png") no-repeat center 20px,
-              url("../img/login-bottom.png") no-repeat center bottom;
+              url("../img/bg.png")  no-repeat center bottom;
+  background-size: auto,100% ;
   .page-home{
     padding-top: 185px;
     width: 85%;
