--- a/air-life-app/www/css/style.css
+++ b/air-life-app/www/css/style.css
@@ -1,5 +1,6 @@
 .app-air-login {
-  background: url("../img/air-life.png") no-repeat center 20px, url("../img/login-bottom.png") no-repeat center bottom; }
+  background: url("../img/air-life.png") no-repeat center 20px, url("../img/bg.png") no-repeat center bottom;
+  background-size: auto,100%; }
   .app-air-login .page-home {
     padding-top: 185px;
     width: 85%;
