--- a/air-life-app/www/templates/air-tabs.html
+++ b/air-life-app/www/templates/air-tabs.html
@@ -6,13 +6,13 @@
   </ion-tab>
 
   <!-- 我的服务 -->
-  <ion-tab title="我的服务" icon-off="ion-ios-keypad" icon-on="ion-ios-keypad" href="#/air-clinic-my-service">
-    <ion-nav-view name="air-my-service"></ion-nav-view>
+  <ion-tab title="我的服务" icon-off="ion-ios-keypad" icon-on="ion-ios-keypad" href="#/air-tabs/air-clinic-my-service">
+    <ion-nav-view name="air-clinic-my-service"></ion-nav-view>
   </ion-tab>
 
   <!-- 个人中心 -->
-  <ion-tab title="个人中心" icon-off="ion-android-person" icon-on="ion-android-person" href="#/air-clinic-personal-center">
-    <ion-nav-view name="air-personal-center"></ion-nav-view>
+  <ion-tab title="个人中心" icon-off="ion-android-person" icon-on="ion-android-person" href="#/air-tabs/air-clinic-personal-center">
+    <ion-nav-view name="air-clinic-personal-center"></ion-nav-view>
   </ion-tab>
 
 
