删除app.js内多余代码

--- a/air-life-app/www/templates/air-home-page.html
+++ b/air-life-app/www/templates/air-home-page.html
@@ -1,6 +1,6 @@
 <ion-view class="app-air-home-page" view-title="爱尔生活">
   <ion-content>
-    <img ng-src="img/home-page.jpg" alt="">
+    <img ng-src="img/home-page.jpg">
     <div class="home-page">
       <div class="row">
         <div class="col col-50">
