--- a/air-life-app/www/templates/air-tabs.html
+++ b/air-life-app/www/templates/air-tabs.html
@@ -1,7 +1,6 @@
 <ion-tabs class="tabs-icon-top tabs-color-active-positive">
-
   <!-- 首页 -->
-  <ion-tab title="首页" icon-off="ion-home" icon-on="ion-home" href="#/air-home-page">
+  <ion-tab title="首页" icon-off="ion-home" icon-on="ion-home" href="#/air-tabs/air-home-page">
     <ion-nav-view name="air-home-page"></ion-nav-view>
   </ion-tab>
 
