--- a/air-life-app/www/templates/air-clinic-add-personal.html
+++ b/air-life-app/www/templates/air-clinic-add-personal.html
@@ -3,11 +3,11 @@
       <div class="list">
         <label class="item item-input">
           <span class="input-label">姓名</span>
-          <input type="text">
+          <input type="text" placeholder="请输入姓名">
         </label>
         <label class="item item-input">
           <span class="input-label">身份证号</span>
-          <input type="password">
+          <input type="password" placeholder="请输入身份证号">
         </label>
       </div>
     <div class="list row" >
