--- a/air-life-app/www/templates/air-clinic-illness-description.html
+++ b/air-life-app/www/templates/air-clinic-illness-description.html
@@ -38,6 +38,15 @@
           <p>上传图片</p>
           <i class="icon ion-chevron-right"></i>
         </ion-item>
+        <div class="imgUpload">
+          <div class="imgItem">
+            <img ng-src="img/test.jpg" alt="">
+            <i class="ion-close-circled"></i>
+          </div>
+          <div class="imgItem">
+            <img ng-src="img/test.jpg" alt="">
+          </div>
+        </div>
         <ion-item class="title">
           <p>就诊人</p>
         </ion-item>
